# teikoku-no-densetsu

./: app.py  pyproject.toml
bot/: __init__.py
bot/constants/: alert.py  close.py  command.py  commands.py  filters.py  job.py  message.py  messages.py  query.py  section.py  sections.py  world.py
bot/conversations/city/: put_city.py
bot/conversations/game/: world.py
bot/conversations/general/: close.py
bot/conversations/info/: info_group.py  info_player.py  info_world.py
bot/conversations/register/: set_group.py  set_player.py  show_group.py  show_player.py  show_world.py  signup.py  signup_group.py  signup_player.py  signup_world.py
bot/conversations/user/: signup.py
bot/decorators/: group.py  player.py  print.py  world.py
bot/enums/: context.py
bot/functions/: arg.py  group.py  handler.py  image.py  message.py  messages.py  player.py  text.py  updates.py  user.py
general/constants/: text.py
general/enums/: emojis.py
general/functions/: date_time.py  text.py
repository/mongo/: base.py  collection_enum.py  database.py
repository/mongo/enums/: collection.py  field.py
repository/mongo/functions/: context.py  group.py  player.py  user.py  world.py
repository/mongo/models/: city.py  group.py  model.py  player.py  user.py  (+1 more)
teikoku/: player.py  user.py
teikoku/data/: stats.py  unit.py  world.py
teikoku/enum/: generic.py  resource.py  stats.py  terrain.py  unit.py
teikoku/register/: group.py  player.py
teikoku/util/: log.py
teikoku/world/: city.py  coor.py  mine.py  world.py
tests/teikoku/: test_group.py  test_player.py  test_user.py
(+24 files in other folders)
