[tool.poetry]
name = "Teikoku no Densetsu (帝国の伝説)"
version = "0.1.0"
description = "Bot para o telegram de jogo de gerenciamento de cidade."
authors = ["Edson Cristovam <pg2006pe@hotmail.com>"]
license = "GNU V3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
pillow = "12.0.0"
pymongo = "4.17.0"
python = "^3.10.1 <3.11.0"
python-decouple = "3.8"
python-telegram-bot = {version = "21.10", extras = ["job-queue"]}
pytz = "2025.1"
noise = "1.2.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "2.3.2"
pytest = "9.0.3"
flake8 = "7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
